were fixed: date format, header alignment, table height

--- a/js/styles/atlas.css
+++ b/js/styles/atlas.css
@@ -10,8 +10,11 @@ table.cohort-generate-sources td {
 
 table.cohort-generate-sources tbody.overflow {
   display: block;
-  max-height: 210px;
   overflow: auto;
+}
+
+table.cohort-generate-sources tbody.max-height {
+  max-height: 210px;
 }
 
 table.cohort-generate-sources thead, table.cohort-generate-sources tbody tr {
